Added more functionality to the call to action section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/css/css.css">
+    <link rel="shortcut icon" href="static/img/computers-33039_1920.png" type="image/x-icon">
     <title>Portifolio</title>
 </head>
 <body>
